# anima

./: .gitignore  CMakeLists.txt  README  anima.kdev4  dict_json_generator.cpp  dict_json_generator.h  dictionary.sql  main_login.cpp  user_data.sql
.kdev4/: anima.kdev4
docs/: Doxyfile
docs/html/: annotated.html  classAtomicBoolean-members.html  classAtomicBoolean.html  classAtomicCounter-members.html  classAtomicCounter.html  classAtomicFloat-members.html  classAtomicFloat.html  classAtomicUInt-members.html  classAtomicUInt.html  classAtomicULong-members.html  classAtomicULong.html  classConfig-members.html  classConfig.html  classFQueue-members.html  classFQueue.html  classFastMutex-members.html  classFastMutex.html  classFastRWMutex-members.html  classFastRWMutex.html  classJSON-members.html  classJSON.html  classJSONValue-members.html  classJSONValue.html  classLSHandlerSocket-members.html  classLSHandlerSocket.html  classLSWorkerThread-members.html  classLSWorkerThread.html  classListenSocket-members.html  classListenSocket.html  classListenSocketBase-members.html  classListenSocketBase.html  classLoginServer-members.html  classLoginServer.html  classMutex-members.html  classMutex.html  classNetCore-members.html  classNetCore.html  classNetCoreWorkerThread-members.html  classNetCoreWorkerThread.html  classPeriodicThreadCaller-members.html  (+44 more)
docs/html/search/: all_5f.html  all_61.html  all_63.html  all_64.html  all_66.html  all_69.html  all_6a.html  all_6c.html  all_6d.html  all_6e.html  all_70.html  all_73.html  all_74.html  all_7e.html  classes_61.html  classes_63.html  classes_6a.html  classes_6c.html  classes_6d.html  classes_6e.html  classes_70.html  classes_73.html  classes_74.html  enums_63.html  enumvalues_6c.html  functions_61.html  functions_63.html  functions_65.html  functions_6a.html  functions_6c.html  functions_6d.html  functions_6e.html  functions_6f.html  functions_70.html  functions_72.html  functions_73.html  functions_74.html  search.js  variables_6d.html
docs/latex/: annotated.tex  classAtomicBoolean.tex  classAtomicCounter.eps  classAtomicCounter.tex  classAtomicFloat.tex  classAtomicUInt.eps  classAtomicUInt.tex  classAtomicULong.tex  classConfig.eps  classConfig.tex  classFQueue.tex  classFastMutex.tex  classFastRWMutex.tex  classJSON.tex  classJSONValue.tex  classLSHandlerSocket.eps  classLSHandlerSocket.tex  classLSWorkerThread.eps  classLSWorkerThread.tex  classListenSocket.eps  classListenSocket.tex  classListenSocketBase.eps  classListenSocketBase.tex  classLoginServer.eps  classLoginServer.tex  classMutex.tex  classNetCore.eps  classNetCore.tex  classNetCoreWorkerThread.eps  classNetCoreWorkerThread.tex  classPeriodicThreadCaller.eps  classPeriodicThreadCaller.tex  classSingleton.tex  classSocket.eps  classSocket.tex  classSocketBase.eps  classSocketBase.tex  classSocketOperations.eps  classSocketOperations.tex  classThread.eps  (+9 more)
game_server/: CMakeLists.txt  database_manager.cpp  database_manager.h  debug_update.cpp  debug_update.h  ext_interface.cpp  ext_interface.h  game_server.cpp  game_server.h  game_socket.cpp  game_socket.h  instance.cpp  instance.h  login_socket.cpp  login_socket.h  main_game.cpp  main_instance.cpp  main_instance.h  pvp_instance.cpp  pvp_instance.h  server.cpp  server.h  shard.cpp  shard.h  shard_ext.cpp  shard_ext.h  shard_storage.cpp  shard_storage.h  shared_object.cpp  shared_object.h  sql_define.h  user.h  user_ext.cpp  user_ext.h  user_interface.h
game_server/dict/: dict_manager.cpp  dict_manager.h  dict_object.cpp  dict_object.h
game_server/instance/: ext_socket_instance.cpp  ext_socket_instance.h  instance.h  instance.h~  main_instance.cpp  main_instance.cpp~  main_instance.h  main_instance.h~
game_server/login/: login_service.cpp  login_socket.cpp  login_socket.h  login_vk.cpp
game_server/ratings/: rating_manager.cpp  rating_manager.h
game_server/storage/: ext_interface.cpp  ext_interface.cpp~  ext_interface.h  ext_interface.h~  ext_server_manager.cpp  ext_server_manager.h  ext_socket.cpp  ext_socket.h  storage.cpp  storage.h  storage.h~  storage_thread.cpp  storage_thread.h  storage_timer.cpp  storage_timer.h
game_server/user/: boss.cpp  boss.h  location.cpp  location.h  object.cpp  object.h  object_list.cpp  object_list.h  user.cpp  user.cpp~  user.h  user.h~  user_ext.cpp  user_ext.cpp~  user_ext.h  user_ext.h~  user_interface.h  user_interface.h~  value.cpp  value.h
login_server/: login_server.cpp  login_server.h  login_server_handler.cpp  login_server_handler.h  loginserver.cpp  loginserver.h  loginserverhandler.cpp  loginserverhandler.h  loginserverhandler.h~  main_login.cpp  main_login.cpp~  packet_definitions.h
shared/: callback.h  common.cpp  common.h  config.cpp  config.h  database.cpp  database.h  exeption.cpp  exeption.h  field.h  json.cpp  json.h  json_value.cpp  json_value.h  jsonvalue.cpp  jsonvalue.h  listen_socket.h  listensocket.h  mysql_database.cpp  mysql_database.h  net_core.cpp  net_core.h  netcore.cpp  netcore.h  packet_definitions.h  periodic_thread_caller.cpp  periodic_thread_caller.h  periodicthreadcaller.cpp  periodicthreadcaller.h  random.cpp  random.h  singleton.h  smart_pointer.h  socket.cpp  socket.h  socket_base.h  socket_operations.h  thread.cpp  thread.h  thread_controller.h  (+7 more)
shared/db/: database.cpp  database.h  field.h  mysql_database.cpp  mysql_database.h  sql_define.h
shared/json/: JSON.cpp  JSON.h  JSONValue.cpp  JSONValue.h
shared/mt/: periodic_thread_caller.cpp  periodic_thread_caller.h  thread.cpp  thread.h  thread_controller.h  thread_core.cpp  thread_core.h
shared/net/: command_structs.cpp  command_structs.h  listen_socket.h  net_core.cpp  net_core.cpp~  net_core.h  netcore_worker_thread.cpp  netcore_worker_thread.h  packet_definitions.h  packet_definitions.h~  packet_id.h  socket.cpp  socket.h  socket.h~  socket_operations.h
super_server/: main_super.cpp  main_super.cpp~  super_server.cpp  super_server.cpp~  super_server.h  super_server.h~  super_server_handler.cpp  super_server_handler.cpp~  super_server_handler.h  super_server_handler.h~
